[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subdomainenum"
version = "0.14.1"
description = "Subdomain enumeration CLI: passive + active discovery with verdict summary"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
license-files = ["LICENSE"]
authors = [{ name = "t0kubetsu" }]
keywords = [
    "subdomain",
    "enumeration",
    "recon",
    "dns",
    "osint",
    "security",
    "pentesting",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "dnspython>=2.6",
    "rich>=13.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/NC3-TestingPlatform/subdomainenum"
Repository = "https://github.com/NC3-TestingPlatform/subdomainenum"
Issues = "https://github.com/NC3-TestingPlatform/subdomainenum/issues"
Changelog = "https://github.com/NC3-TestingPlatform/subdomainenum/blob/main/CHANGELOG.md"

[project.scripts]
subdomainenum = "subdomainenum.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["subdomainenum*"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=subdomainenum --cov-report=term-missing"
